<resources>
    <string name="app_name">Team Track</string>
    <string name="user_image">User Image</string>
    <string name="user_details">User Details</string>
    <string name="mobile_number">+91 9876543210</string>
    <string name="blood_group">B Positive</string>
    <string name="filter">Filter</string>
    <string name="address">No 1, ABC Apartments, MNO City, XYZ Country - 600044</string>
    <string name="hint_user_mail">Enter Your Mail</string>
    <string name="hint_user_password">Enter your Password</string>
    <string name="hint_confirm_password">Confirm Your Password</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_account">Register Your Account</string>
    <string name="login_account">Login Your Account</string>
    <string name="hint_login">Already have an account! click here to</string>
    <string name="hint_register">Dont have an account! Click here to</string>
    <string name="login">Login</string>
    <string name="pieChart">Pie Chart</string>
    <string name="error_message_usermail_is_empty">UserMail is Empty</string>
    <string name="error_message_usermail_not_valid">Not a valid mail address</string>
    <string name="error_message_password_empty">Password is Empty</string>
    <string name="error_message_password_character">Password Character must be more than 5</string>
    <string name="error_message_confirm_password_empty">Confirm Password is Empty</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="exit_message">Are you sure you want to logout?</string>
    <string name="logout">LogOut</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="showAllUsers">Show All Countries</string>
    <string name="splashIcon">Splash Icon</string>
    <string name="select_country">Select a Country</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
</resources>