<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:gravity="center"
            android:padding="@dimen/medium"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/llUserInputFields"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPageDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginTop="@dimen/medium"
            android:gravity="center"
            android:padding="@dimen/medium"
            android:text="@string/register_account"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>


        <LinearLayout
            android:id="@+id/llUserInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="@dimen/medium"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="@dimen/medium"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="@dimen/medium"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large"
                android:layout_marginRight="@dimen/large"
                android:layout_marginTop="@dimen/large"
                android:layout_marginBottom="@dimen/medium"
                android:backgroundTint="@color/toolbar"
                android:padding="@dimen/large"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/large"
            android:text="@string/hint_login"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/large"
            android:layout_margin="@dimen/large"
            android:textColor="@color/white"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/toolbar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>