<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.UserDetailsActivity">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:titleTextColor="@color/white"
            android:navigationIcon="@drawable/baseline_arrow_back"
            android:background="@color/toolbar"
            android:minHeight="@android:dimen/app_icon_size"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvUserImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/large"
            app:cardElevation="@dimen/medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:padding="@dimen/medium"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cvUserImage" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:padding="@dimen/medium"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <TextView
            android:id="@+id/tvUserBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:padding="@dimen/medium"
            android:text="@string/blood_group"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvUserEmail" />

        <TextView
            android:id="@+id/tvUserMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:padding="@dimen/medium"
            android:gravity="center"
            android:text="@string/mobile_number"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvUserBloodGroup" />

        <TextView
            android:id="@+id/tvUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginBottom="@dimen/medium"
            android:padding="@dimen/medium"
            android:gravity="center"
            android:text="@string/address"
            android:textSize="@dimen/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvUserMobile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>